--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Message Canvas",
+  "name": "Canvas Message",
   "description": "A Desk.com canvas app that allows to show a message to your agents.",
   "keywords": ["productivity", "service", "canvas", "message"],
   "website": "https://github.com/desklabs/canvas-message",
